# arxiv-parser

./: README.md  out.txt  paper.md  py4llm.py  pyproject.toml  test.py  test_image.py  test_table.py
output/paper/: paper.md  paper_meta.json
pdf_parser/: main.py
